--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,10 +6,10 @@ name: Python application
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
