--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,5 @@ jobs:
     - name: Test with coverage + pytest
       run: |
         python -m coverage run -m pytest
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        python -m coverage report -m
+    
